--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
 		</nav>
 	
 		<div class="row">
-			<div class="col-md-6 col-sm-6 col-lg-6">
-      			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<div class="col-md-6 col-sm-6 col-lg-6" id="abtex">
+      			<p>I am OAK</p>
       		</div>
 
       		<div class="col-md-6 col-sm-6 col-lg-6">
@@ -53,8 +53,6 @@
 				<br>
 				<a href="https://twitter.com/okwao" title="Follow Ohui on Twitter" target="_blank">
 					<img src="./images/twit.png" id="twit"></a>
-      			<a href="http://instagram.com/jkwao" title="Follow Ohui on Instagram" target="_blank">
-      				<img src="./images/ig.png" id="insta"> </a>
       			<a href="http://gh.linkedin.com/pub/ohui-a-kwao/2b/942/20b" title="Connect with Ohui on LinkedIn" target="_blank"><img src="./images/lin.jpg" id="link"></a>
       		</div>
 		</div>
