--- a/about.html
+++ b/about.html
@@ -33,8 +33,13 @@
 		</nav>
 	
 		<div class="row">
-			<div class="col-md-6 col-sm-6 col-lg-6" id="abtex">
-      			<p>I am OAK</p>
+			<div class="col-md-6 col-sm-6 col-lg-6">
+      			<p id="abtex">I am OAK</p>
+      			<p id="she">I am a born and bred Ghanaian from Accra. I think I am unconventional but the words which best describe my personality are goal oriented, hard-working and dedicated.
+
+ 				I have a great passion for cooking. I am convinced it demonstrates my creative side. I keen on board/puzzle games. These games have honed my ability to be strategical and analytical. I am looking to apply my analytical skills within a Management Consulting career. 
+
+				I hope to explore the world, experience different cultures and try out lots of cuisine.</p>	
       		</div>
 
       		<div class="col-md-6 col-sm-6 col-lg-6">
