--- a/about.html
+++ b/about.html
@@ -1,69 +1,53 @@
-<!DOCTYPE html>
 <html>
 <head>
+	<title>Ohui's Dome</title>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/sheet.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ohui's Dome</title>
 </head>
 <body>
-	<div  class="container-fluid">
-		<!--navbar-->
-    	<nav class="navbar navbar-default" role="navigation">
+	<div id="container">
+		<nav class="navbar navbar-default" role="navigation">
 		  <div class="container-fluid">
-		    <!-- Toggle gets grouped for better mobile display -->
+		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		    	<span class="sr-only">Toggle navigation</span>
+		        <span class="sr-only">Toggle navigation</span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
+		      <a class="navbar-brand" href="#">iamOAK</a>
 		    </div>
-		    <!-- Collect the nav links and other content for toggling -->
+		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="index.html">Home</a></li>
-	  			<li><a href="about.html">About me</a></li>
-	  			<li><a href="cv.html">C.V</a></li>
-	  			<li><a href="contact.html">Contact</a></li>
-		       </ul>
+		    	<ul class="nav navbar-nav">
+			        <li><a href=index.html>Home</a></li>
+			        <li><a href=about.html>About Me</a></li>
+			    <!--    <li><a href=cv.html>Resume</a></li> -->
+			        <li><a href=contact.html>Contact</a></li>
+		      	</ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-	
-		<div class="row">
-			<div class="col-md-6 col-sm-6 col-lg-6">
-      			<p id="abtex">I am OAK</p>
-      			<p id="she">I am a born and bred Ghanaian from Accra. I think I am unconventional but the words which best describe my personality are goal oriented, hard-working and dedicated.
-
- 				I have a great passion for cooking. I am convinced it demonstrates my creative side. I keen on board/puzzle games. These games have honed my ability to be strategical and analytical. I am looking to apply my analytical skills within a Management Consulting career. 
-
-				I hope to explore the world, experience different cultures and try out lots of cuisine.</p>	
-      		</div>
-
-      		<div class="col-md-6 col-sm-6 col-lg-6">
-      			<img src="./images/img99.JPG" class="img-responsive">
-      		</div>
-   		 </div>
-
-		<div class="row" id="rowbg1">
-			<div class="col-md-6 col-sm-6 col-lg-6">
-				<br>
-				<p>&copy Copyright Ohui A Kwao</p>
-				<p>web design by OAK</p>
+			<div class="row">
+					<div class="col-md-6 col-sm-6 col-lg-6">
+		      			<h1 id="text"><br>Ohui Afi Kwao</h1><br>
+		      			<p id="tit">Entrepreneur in Training at Meltwater Entrepreneurial School of Technology</p>
+		      			<p id="text1"><br><br><i>Working on Self Actulization</i></p>
+		      		</div>
+		      		<div class="col-md-6 col-sm-6 col-lg-6">
+		      			<center><img src="./images/img99.JPG" class="img-responsive" id="radius"></center>
+		      		</div>
+		   		</div>
+			<div class="row" id="footerco">
+				<div class="col-md-12 col-sm-12 col-lg-12">
+						<p>&copy Copyright Ohui A Kwao 2014</p>
+						<p>web design by OAK</p>
+				</div>
 			</div>
-
-			<div class="col-md-6 col-sm-6 col-lg-6">
-				<br>
-				<a href="https://twitter.com/okwao" title="Follow Ohui on Twitter" target="_blank">
-					<img src="./images/twit.png" id="twit"></a>
-      			<a href="http://gh.linkedin.com/pub/ohui-a-kwao/2b/942/20b" title="Connect with Ohui on LinkedIn" target="_blank"><img src="./images/lin.jpg" id="link"></a>
-      		</div>
-		</div>
+			
 	</div>
-
-
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
