--- a/contact.html
+++ b/contact.html
@@ -1,64 +1,60 @@
-<!DOCTYPE html>
 <html>
 <head>
+	<title>Ohui's Dome</title>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/sheet.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ohui's Dome</title>
 </head>
 <body>
-	<div  class="container-fluid">
-		<!--navbar-->
-    	<nav class="navbar navbar-default" role="navigation">
+	<div id="container">
+		<nav class="navbar navbar-default" role="navigation">
 		  <div class="container-fluid">
-		    <!-- Toggle gets grouped for better mobile display -->
+		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		    	<span class="sr-only">Toggle navigation</span>
+		        <span class="sr-only">Toggle navigation</span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
+		      <a class="navbar-brand" href="#">iamOAK</a>
 		    </div>
-		    <!-- Collect the nav links and other content for toggling -->
+		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="index.html">Home</a></li>
-	  			<li><a href="about.html">About me</a></li>
-	  			<li><a href="cv.html">C.V</a></li>
-	  			<li><a href="contact.html">Contact</a></li>
-		       </ul>
+		    	<ul class="nav navbar-nav">
+			        <li><a href=index.html>Home</a></li>
+			        <li><a href=about.html>About Me</a></li>
+			    <!--    <li><a href=cv.html>Resume</a></li> -->
+			        <li><a href=contact.html>Contact</a></li>
+		      	</ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-	
-		<div class="row">
-			<div class="col-md-6 col-sm-6 col-lg-6">
-      			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      		</div>
+			<div class="row">
+					<div class="col-md-6 col-sm-6 col-lg-6">
+		      			<center>
+					<a class="socialIcons" href="http://twitter.com/okwao" title="Follow Ohui on Twitter"><img src="./images/twitter-128.png" /></a>
 
-      		<div class="col-md-6 col-sm-6 col-lg-6">
-      			<img src="./images/img99.JPG" class="img-responsive">
-      		</div>
-   		 </div>
+					<a class="socialIcons" href="http://okwao.tumblr.com/" title="Follow Ohui on Tumblr"><img src="./images/tumblr-128.png" /></a>
 
-		<div class="row" id="rowbg1">
-			<div class="col-md-6 col-sm-6 col-lg-6">
-				<br>
-				<p>&copy Copyright Ohui A Kwao</p>
-				<p>web design by OAK</p>
+					<a class="socialIcons" href="https://www.linkedin.com/profile/view?id=106835627&trk=nav_responsive_tab_profile" title="Connect with Ohui on Linkedin"><img src="./images/linkedin-128.png" /></a>
+				</center>
+		      		</div>
+		      		<div class="col-md-6 col-sm-6 col-lg-6">
+		      			<center><img src="./images/img99.JPG" class="img-responsive" id="radius"></center>
+		      		</div>
+		   		</div>
+
+
+
+			<div class="row" id="footerco">
+				<div class="col-md-12 col-sm-12 col-lg-12">
+						<p>&copy Copyright Ohui A Kwao 2014</p>
+						<p>web design by OAK</p>
+				</div>
 			</div>
-
-			<div class="col-md-6 col-sm-6 col-lg-6">
-				<br>
-				<a href="https://twitter.com/okwao" title="Follow Ohui on Twitter" target="_blank">
-					<img src="./images/twit.png" id="twit"></a>
-      			<a href="http://gh.linkedin.com/pub/ohui-a-kwao/2b/942/20b" title="Connect with Ohui on LinkedIn" target="_blank"><img src="./images/lin.jpg" id="link"></a>
-      		</div>
-		</div>
+			
 	</div>
-
-
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
