--- a/about.html
+++ b/about.html
@@ -32,9 +32,14 @@
 		</nav>
 			<div class="row">
 					<div class="col-md-6 col-sm-6 col-lg-6">
-		      			<h1 id="text"><br>Ohui Afi Kwao</h1><br>
-		      			<p id="tit">Entrepreneur in Training at Meltwater Entrepreneurial School of Technology</p>
-		      			<p id="text1"><br><br><i>Working on Self Actulization</i></p>
+		      			<p>
+		      				I'm Ohui A Kwao, a Ghanaian from Accra. I am currently an Entrepreneur in Training at the Meltwater Entreprenurial Schoool of Technology. I think I am unconventional but the words which best describe my personality are ORIGINAL, KIND, HARDWORKING, DEDICATED AVID and KIND.
+
+		      				I have a great passion for technology, I am convinced that it would help me make an impact in the world.
+
+		      				My greatest hope is to explore the world and experience different cultures.
+
+		      			</p>
 		      		</div>
 		      		<div class="col-md-6 col-sm-6 col-lg-6">
 		      			<center><img src="./images/img99.JPG" class="img-responsive" id="radius"></center>
