--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">iamOAK</a>
+		      <a class="navbar-brand" href=index.html>iamOAK</a>
 		    </div>
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -32,6 +32,7 @@
 		</nav>
 			<div class="row">
 					<div class="col-md-6 col-sm-6 col-lg-6">
+
 		      			<center>
 					<a class="socialIcons" href="http://twitter.com/okwao" title="Follow Ohui on Twitter"><img src="./images/twitter-64.png" /></a>
 
