--- a/about.html
+++ b/about.html
@@ -32,11 +32,14 @@
 		</nav>
 			<div class="row">
 					<div class="col-md-6 col-sm-6 col-lg-6">
-		      			<p>
-		      				I'm Ohui A Kwao, a Ghanaian from Accra. I am currently an Entrepreneur in Training at the Meltwater Entreprenurial Schoool of Technology. I think I am unconventional but the words which best describe my personality are ORIGINAL, KIND, HARDWORKING, DEDICATED AVID and KIND.
-
+		      			<p id ="conte">
+		      				<br> <br>
+		      				I'm Ohui A Kwao, a Ghanaian from Accra. I am currently an Entrepreneur in Training at the Meltwater Entreprenurial Schoool of Technology. 
+		      				<br> <br>
+		      				I think I am unconventional but the words which best describe my personality are ORIGINAL, KIND, HARDWORKING, DEDICATED AVID and KIND.
+		      				<br> <br>
 		      				I have a great passion for technology, I am convinced that it would help me make an impact in the world.
-
+		      				<br><br>
 		      				My greatest hope is to explore the world and experience different cultures.
 
 		      			</p>
