--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,11 @@
 		</nav>
 			<div class="row">
 					<div class="col-md-6 col-sm-6 col-lg-6">
-
+						<br><br>
+						<p id="contc">
+							Contact me on Social media
+						</p>
+						<br><br>
 		      			<center>
 					<a class="socialIcons" href="http://twitter.com/okwao" title="Follow Ohui on Twitter"><img src="./images/twitter-64.png" /></a>
 
@@ -40,6 +44,10 @@
 
 					<a class="socialIcons" href="https://www.linkedin.com/profile/view?id=106835627&trk=nav_responsive_tab_profile" title="Connect with Ohui on Linkedin"><img src="./images/linkedin-64.png" /></a>
 				</center>
+				<br><br>
+				<p id="contc">
+					or send me an email @ afi_joanita@hotmail.com
+				</p>
 		      		</div>
 		      		<div class="col-md-6 col-sm-6 col-lg-6">
 		      			<center><img src="./images/img99.JPG" class="img-responsive" id="radius"></center>
