complete redesign to on pager

--- a/index.html
+++ b/index.html
@@ -1,54 +1,291 @@
-<html>
+<!DOCTYPE html>
 <head>
-	<title>Ohui's Dome</title>
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./css/sheet.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="OAK" content="">
+
+	<title>Welcome - Ohui's Dome</title>
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css.map">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
+
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/jquery.scrolly.min.js"></script>
+	<script type="text/javascript" src="js/skel.min.js"></script>
+	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 </head>
 <body>
-	<div id="container">
-		<nav class="navbar navbar-default" role="navigation">
-		  <div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="#">iamOAK</a>
-		    </div>
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    	<ul class="nav navbar-nav">
-			        <li><a href=index.html>Home</a></li>
-			        <li><a href=about.html>About Me</a></li>
-			    <!--    <li><a href=cv.html>Resume</a></li> -->
-			        <li><a href=contact.html>Contact</a></li>
-		      	</ul>
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
-		</nav>
-			<div class="row">
-				<div class="col-md-6 col-sm-6 col-lg-6">
-	      			<h1 id="text"><br>Ohui Afi Kwao</h1><br>
-	      			<p id="tit">Entrepreneur in Training at Meltwater Entrepreneurial School of Technology</p>
-	      			<p id="text1"><br><br><i>Working on Self Actulization</i></p>
-	      		</div>
-	      		<div class="col-md-6 col-sm-6 col-lg-6">
-	      			<center><img src="./images/img99.JPG" class="img-responsive" id="radius"></center>
-	      		</div>
-	   		</div>
-				<div class="row" id="footerco">
-					<div class="col-md-12 col-sm-12 col-lg-12">
-						<p>&copy Copyright Ohui A Kwao 2014</p>
-						<p>web design by OAK</p>
-					</div>
-				</div>
-	</div>
+	<!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top navc">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">OAK</a>
+            </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden page-scroll">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Header -->
+    <header id="page-top">
+        <div class="container">
+            <div class="intro-text">
+				<img src="./images/me.jpg" class="img-rounded img-thumbnail new img-responsive">
+				<br><br>
+                <div class="intro-lead-in">Hi, I am Ohui A Kwao!</div>
+                <div class="intro-heading">Welcome to my world.</div>
+                <a href="#about" class="page-scroll btn btn-xl">Find out more...</a>
+            </div>
+        </div>
+    </header>
+
+    <!-- About -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">About</h2>
+                    <h3 class="section-subheading text-muted">
+                    	<p>
+                    		I view myself as a technology enthusiast, web developer and business oriented individual.
+                    	</p>
+                    	<p>
+                    		My Journey so far.. enjoy!
+                    	</p>
+                    	
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./images/fe.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>February 1991</h4>
+                                    <h4 class="subheading">My Humble Beginnings</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                    	I'm Ohui A Kwao, a Ghanaian from Accra.  I am currently an Entrepreneur in Training at the Meltwater Entreprenurial Schoool of Technology. Before my teens I remember wanting to be a lawyer but that changed after junior high school. After one session in MS-DOS i knew then i wanted to be in the tech space.
+                                     </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./images/tec.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>September 2006</h4>
+                                    <h4 class="subheading">Passion for technology is Born</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive sch" src="./images/sch.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2010</h4>
+                                    <h4 class="subheading">University Days</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="./images/mest.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>August 2014 - </h4>
+                                    <h4 class="subheading">Melwater Entreprenurial School of Technology(MEST)</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of My
+                                    <br>Journey!</h4>
+                            </div>
+                            <div class="timeline-panel">
+                            	<div class="timeline-heading">
+                                    <h4>My Journey so far..</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                    	I think I am unconventional but the words which best describe my personality are ORIGINAL, KIND, HARDWORKING, DEDICATED and AVID. 
+										I have a great passion for technology, I am convinced that it would help me make an impact in the world. 
+										My greatest hope is to explore the world and experience different cultures. 
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section id="portfolio" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Portfolio</h2>
+                    <h3 class="section-subheading text-muted">Projects I have worked on so far...</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                            	<!-- <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                          <img src="./images/todo.jpg" class="img-responsive" alt=""> 
+                          </a>
+                    <div class="portfolio-caption">
+                        <h4>To Do Website</h4>
+                        <p class="text-muted">Meteor Website</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                         <img src="./images/sorms.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Students Online Results Monitoring System</h4>
+                        <p class="text-muted">Rails Website</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <!--  -->
+                            </div>
+                        </div>
+                        <img src="./images/job.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Online job finder</h4>
+                        <p class="text-muted">Meteor Website</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                
+                            </div>
+                        </div>
+                         <img src="./images/csoon.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>More to follow soon</h4>
+                        <p class="text-muted">Website Design...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+     <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading" style="color:white">Contact Me</h2>
+                    <h3 class="section-subheading text-muted" style="color:white">I am open to building websites and working on other projects. Shoot me an email or contact me on social media</h3>
+                    <p class="section-subheading text-muted" style="color:white">Email: 
+                        <p class="section-subheading text-muted cras" style="color:white">afi_joanita@hotmail.com</p>
+                        <p class="section-subheading text-muted cras" style="color:white">or</p> 
+                        <p class="section-subheading text-muted cras" style="color:white">afi.kwao@meltwater.org</p>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+        <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <span class="copyright">Copyright &copy; Ohui A Kwao 2015</span>
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="https://twitter.com/OKwao"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="https://www.linkedin.com/profile/view?id=106835627&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                        <li><a href="https://github.com/okwao"><i class="fa fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
