about me updated

--- a/index.html
+++ b/index.html
@@ -91,12 +91,9 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
                     <h3 class="section-subheading text-muted">
-                    	<p>
-                    		I view myself as a technology enthusiast, web developer and business oriented individual.
-                    	</p>
-                    	<p>
+                    		I am a technology enthusiast, an entrepreneur, web developer and a business oriented individual.
+                            <br><br>
                     		My Journey so far.. enjoy!
-                    	</p>
                     	
                     </h3>
                 </div>
@@ -111,11 +108,11 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>February 1991</h4>
-                                    <h4 class="subheading">My Humble Beginnings</h4>
+                                    <h4 class="subheading">My Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                    	I'm Ohui A Kwao, a Ghanaian from Accra.  I am currently an Entrepreneur in Training at the Meltwater Entreprenurial Schoool of Technology. Before my teens I remember wanting to be a lawyer but that changed after junior high school. After one session in MS-DOS i knew then i wanted to be in the tech space.
+                                        Born in Accra - Ghana on 8th February. I was a curious child (still am in adulthood), I was born at a time when gadgets for home were becoming a thing. As soon as i old enough to hold a screw driver i got more curious to know what made the gadgets in the house work. I think then my child self knew subconciously technology was goin to be the big passion and not law as I originally thought. 
                                      </p>
                                 </div>
                             </div>
@@ -130,7 +127,10 @@
                                     <h4 class="subheading">Passion for technology is Born</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                         For as long as I can remember my dream was always to ba a lawyer but that changed after Junior High. It started with just one lesson in MS-DOS and then i knew i wanted to be in the technology space. Since then my entire focus has been bringing that dream to a reality.
+                                         In High school my favorite subject was Information Technology and was ever curious to know all and understand how things work.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -144,7 +144,13 @@
                                     <h4 class="subheading">University Days</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        Staying true to my love for technology when the time came for me to choose a major for my Business Administration course, I chose Business Information Technology. 
+                                        <br>
+                                        The class was exciting, frustrating and fulfilling. When I built my first program which was a calculator in delphi i was elated. It just made the itch for technology grow more. During my time in university, my entreprenurial spirit was born, I didnt want to just build things for myself but for others and have it impact their lives positively.
+                                        <br>
+                                        One fateful day in class two representatives came in to talk about Meltwater Entreprenurial School of Technology and instictively i knew that was the place to be. I knew there i would be developed into a well rounded entrepreneur.  
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -158,7 +164,9 @@
                                     <h4 class="subheading">Melwater Entreprenurial School of Technology(MEST)</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        Currently, I am an Entrepreneur in Training at MEST and i am enjoying every bit of this journey. The technology, business and communications class have helped me grow and improve upon myself. I am exposed to different cultures and its teaching about how to behave in various culture concepts. At the end on this program in 2016, I am confident that i would start my own company and impact the world positively even if its a small dent. 
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -170,7 +178,7 @@
                             </div>
                             <div class="timeline-panel">
                             	<div class="timeline-heading">
-                                    <h4>My Journey so far..</h4>
+                                    <h4>In Summary..</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
